cabal-version:      3.0
name:               ppp
version:            0.1.0.0
homepage:           https://github.com/rendick/ppp
license:            BSD-2-Clause
author:             rendick

maintainer:         rendick123@proton.me
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable ppp
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.1, random, directory, unix, yaml, aeson, text

    hs-source-dirs:   app
    other-modules:    Commands.Generation, 
                      Commands.ProduceFile,
                      Commands.ParseYaml

    default-language: Haskell2010
